[project]
name = "auth-watcher"
version = "0.1.0"
description = "Monitor SSH login attempts on your server - see who's trying to break in"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [{ name = "IndieKit", email = "hello@indiekit.ai" }]
keywords = ["ssh", "security", "monitoring", "auth", "login", "server"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
    "Topic :: Security",
]

[project.urls]
Homepage = "https://indiekit.ai"
Repository = "https://github.com/indiekitai/auth-watcher"
Issues = "https://github.com/indiekitai/auth-watcher/issues"

[project.scripts]
auth-watcher = "auth_watcher:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
